@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkWinWm.c,v 1.60 2004/01/13 02:06:02 davygrvy Exp $
+ * RCS: @(#) $Id: tkWinWm.c,v 1.61 2004/05/08 03:53:57 chengyemao Exp $
  */
 
 #include "tkWinInt.h"
@@ -1805,7 +1805,7 @@ UpdateWrapper(winPtr)
     TkWindow *winPtr;		/* Top-level window to redecorate. */
 {
     register WmInfo *wmPtr = winPtr->wmInfoPtr;
-    HWND parentHWND, oldWrapper;
+    HWND parentHWND, oldWrapper = wmPtr->wrapper;
     HWND child;
     int x, y, width, height, state;
     WINDOWPLACEMENT place;
@@ -1946,7 +1946,7 @@ UpdateWrapper(winPtr)
 	SetWindowLong(child, GWL_WNDPROC, (LONG) TopLevelProc);
 #endif
     }
-    oldWrapper = SetParent(child, wmPtr->wrapper);
+    SetParent(child, wmPtr->wrapper);
     if (oldWrapper) {
 	hSmallIcon = (HICON) SendMessage(oldWrapper, WM_GETICON, ICON_SMALL,
 		(LPARAM) NULL);
